# doppelganger-ai

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_v1.md  SECURITY.md  architecture_v1.md  build-desktop.sh  pyproject.toml  roadmap_v1.md
.github/ISSUE_TEMPLATE/: bug_report.md  skill_submission.md
.github/workflows/: ci.yml
config/: default.yaml
docker/: Dockerfile.core  docker-compose.yml
docs/: architecture.md  roadmap.md
examples/: skill_template.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ProactivePanel.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/components/graph/: MemoryGraph.tsx
frontend/src/hooks/: useHealthPoller.ts  useWebSocket.ts
frontend/src/lib/: api.ts  store.ts
frontend/src/pages/: ChatPage.tsx  MemoryPage.tsx  PerceptionPage.tsx  PersonasPage.tsx  SimPage.tsx  SkillsPage.tsx
mobile/: package.json
mobile/src/: theme.ts
mobile/src/components/: SuggestionCard.tsx
mobile/src/screens/: ConnectScreen.tsx  HomeScreen.tsx  MemoryScreen.tsx
mobile/src/services/: api.ts  lanDiscovery.ts
skills/email_autoreply/: manifest.json  skill.py
skills/minecraft_assistant/: manifest.json  skill.py
skills/smart_home/: manifest.json  skill.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/doppelganger/: __init__.py
src/doppelganger/actions/: __init__.py  skill_loader.py
src/doppelganger/agents/: __init__.py  grok_client.py  runtime.py  tools.py
src/doppelganger/core/: __init__.py  config.py  event_bus.py  orchestrator.py  orchestrator_v3.py
src/doppelganger/interfaces/: __init__.py  api.py  cli.py  persona_routes.py  registry_routes.py  v3_routes.py
src/doppelganger/memory/: __init__.py  entity_extractor.py  graphiti_kg.py  memory_manager.py
src/doppelganger/memory/compression/: __init__.py  compressor.py
src/doppelganger/memory/importers/: __init__.py  browser_history.py  notion.py  obsidian.py
src/doppelganger/perception/: __init__.py  calendar_integration.py  daemon.py  pipeline.py  typing_cadence.py  wifi_csi.py
src/doppelganger/perception/csi/: pose_estimator.py
src/doppelganger/personas/: __init__.py  manager.py
src/doppelganger/proactive/: __init__.py  engine.py
src/doppelganger/reasoning/: __init__.py  swarm.py
src/doppelganger/sdk/: __init__.py
src/doppelganger/voice/: __init__.py  emotion_detector.py  multilingual.py  pipeline.py
src/doppelganger/voice/diarization/: diarizer.py
src/doppelganger/voice/wake_word/: detector.py
tests/: conftest.py  test_core.py
tests/e2e/: test_full_system.py
tests/security/: test_security_audit.py
