[package]
name = "doppelganger"
version = "0.1.0"
description = "Doppelganger AI — Your local AI twin"
authors = ["Doppelganger AI Contributors"]
license = "MIT"
repository = "https://github.com/doppelganger-ai/doppelganger"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
  "shell-open",
  "system-tray",
  "window-all",
  "notification-all",
  "global-shortcut-all",
  "app-all",
  "path-all",
  "fs-all",
  "process-all",
  "dialog-all",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
which = "5"
dirs = "5"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
